--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -25,19 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    pi = 3.14\n",
+    "    \n",
+    "    return (4/3) * pi * rad ** 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "33.49333333333333"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,51 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check\n",
-    "ran_check(5,2,7)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you only wanted to return a boolean:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return num >= low and num <= high"
    ]
   },
   {
@@ -130,7 +91,46 @@
     }
    ],
    "source": [
-    "ran_bool(3,1,10)"
+    "# Check\n",
+    "ran_check(5,2,7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you only wanted to return a boolean:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ran_bool(num,low,high):\n",
+    "    # return num >= low and num <= high\n",
+    "    return num in range(low,high+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ran_bool(30,1,10)"
    ]
   },
   {
@@ -152,29 +152,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    lowercount = uppercount = 0\n",
+    "    \n",
+    "    for char in s:\n",
+    "        if char.islower():\n",
+    "            lowercount += 1\n",
+    "        elif char.isupper():\n",
+    "            uppercount +=1\n",
+    "    \n",
+    "    return(lowercount,uppercount)\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(33, 4)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,19 +203,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +222,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,34 +244,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    product = 1\n",
+    "    \n",
+    "    for num in numbers:\n",
+    "        product *= num\n",
+    "    \n",
+    "    return product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-24"
+       "-240"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "multiply([1,2,3,-4])"
+    "multiply([1,2,3,-4,10])"
    ]
   },
   {
@@ -280,19 +289,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    s = s.lower().replace(\" \",\"\")\n",
+    "    return s == s[::-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +309,13 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('Able was I ere I saw Elba')"
    ]
   },
   {
@@ -331,21 +339,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    \n",
+    "    ascii_set = set(alphabet)\n",
+    "\n",
+    "    str_set = set(str1.lower().replace(\" \",\"\"))\n",
+    "\n",
+    "    return ascii_set == str_set\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +366,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +386,7 @@
        "'abcdefghijklmnopqrstuvwxyz'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
