--- a/05-Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/04-OOP Challenge.ipynb
@@ -34,22 +34,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Account:\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self,owner,balance):\n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        display_str = f\"Account owner:\\t{self.owner}\\n\"\n",
+    "        display_str += f\"Account balance:\\t${self.balance}\"\n",
+    "        return display_str\n",
+    "    \n",
+    "    def deposit(self,amount):\n",
+    "        self.balance += amount\n",
+    "        return \"$\" + str(self.balance)\n",
+    "    \n",
+    "    def withdraw(self,amount):\n",
+    "        if amount > self.balance:\n",
+    "            return \"Insufficient funds\"\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            return \"$\" + str(self.balance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Instantiate the class\n",
@@ -58,15 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account owner:   Jose\n",
-      "Account balance: $100\n"
+      "Account owner:\tJose\n",
+      "Account balance:\t$100\n"
      ]
     }
    ],
@@ -77,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +101,7 @@
        "'Jose'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +122,7 @@
        "100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,15 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deposit Accepted\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'$150'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -137,15 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Withdrawal Accepted\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'$75'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -154,15 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Funds Unavailable!\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Insufficient funds'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -194,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
